# filefisher

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  pypi-release.yaml
ci/requirements/: min_all_deps.txt
docs/source/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  usage.rst
filefinder/: __init__.py  _filefinder.py  cmip.py  filters.py  utils.py
filefinder/tests/: __init__.py  test_cmip.py  test_filecontainer.py  test_filefinder.py  test_filefinder_fmt.py  test_filters.py  test_utils.py
filefisher/: _filefinder.py  _utils.py  cmip.py  filters.py
filefisher/tests/: __init__.py  test_filecontainer.py  test_filefinder.py  test_utils.py
